--- a/NpgsqlNetStandard2.0NetFramework.csproj
+++ b/NpgsqlNetStandard2.0NetFramework.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Npgsql">
-      <Version>7.0.0-preview.8-ci.20220912T215110</Version>
+      <Version>7.0.6</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
