--- a/NpgsqlNetStandard2.0NetFramework.csproj
+++ b/NpgsqlNetStandard2.0NetFramework.csproj
@@ -51,7 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Npgsql">
-      <Version>6.0.7-ci.20220910T145136</Version>
+      <Version>6.0.10</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
